--- a/src/index.scss
+++ b/src/index.scss
@@ -1,26 +1,137 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
 }
-
+* {
+  font-family: 'Inter', system-ui;
+}
 .wrapper {
-
-//position: absolute;
-//width: 1080px;
-//height: 1526px;
-//left: 85px;
-//top: 85px;
-
-background: #ffffff;
-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
-border-radius: 20px;
-max-width: 1080px;
-margin: 50px auto;
-
+  background: #ffffff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+  border-radius: 20px;
+  max-width: 1080px;
+  margin: 50px auto;
+  .overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    .drawer {
+      position: absolute;
+      width: 420px;
+      height: 100%;
+      right: 0;
+      background: #ffffff;
+      box-shadow:  -10px 4px 24px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      h2 {
+        display: flex;
+        justify-content: space-between;
+        margin: 0;
+        margin-bottom: 30px;
+        font-size: 24px;
+        img {
+          cursor: pointer;
+        }
+      }
+      .itemsCart {
+        flex: 1;
+        overflow: auto;
+        margin-bottom: 20px;
+        .cartItem {
+          border: 1px solid #f3f3f3;
+          border-radius: 20px;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          margin-bottom: 20px;
+          div {
+            margin-right: 20px;
+          }
+          img {
+            margin-bottom: 20px;
+          }
+          div.p {
+            margin-bottom: 5px;
+            font-size: 16px;
+          }
+          div.b {
+            font-size: 14px;
+            margin-bottom: 5px;
+          }
+          .removeBtn {
+            opacity: 0.5;
+            cursor: pointer;
+            transition: opacity 0.15s ease-in-out;
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      }
+      .cartTotal {
+        ul {
+          display: block;
+          margin-bottom: 40px !important;
+          div {
+            flex: 1;
+            height: 1px;
+            border-bottom: 1px dashed #dfdfdf;
+            position: relative;
+            top: -4px;
+            margin: 0 7px;
+          }
+          .total {
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 20px;
+          }
+          .tax {
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 20px;
+          }
+        }
+        .greenBtn {
+          width: 100%;
+          height: 55px;
+          background: #9dd558;
+          border-radius: 18px;
+          border: 0;
+          color: #fff;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+          transition: background 0.1s ease-in-out;
+          &:hover {
+            background: lighten(#9dd558, 5%);
+          }
+          &:active {
+            background: darken(#9dd558, 5%);
+          }
+          position: relative;
+          &:hover {
+            img {
+            transform: translateX(5px);
+          }}
+          img {
+            position: absolute;
+            right: 30px;
+            
+            transition: transform 0.15s ease-in-out;
+          }
+        }
+      }
+    }
+  }
 }
 .clear {
   * {
@@ -28,7 +139,6 @@ margin: 50px auto;
     outline: none;
 
   }
-
   a {
     color: inherit;
     text-decoration: none;
@@ -43,14 +153,12 @@ margin: 50px auto;
     list-style-type: none;
   }
 }
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 40px;
   border-bottom: 1px solid #eaeaea;
-
   .headerLeft {
     display: flex;
     align-items: center;
@@ -62,7 +170,6 @@ header {
       margin: 0;
     }
   }
-
   .headerRight {
     display: flex;
   }
@@ -72,7 +179,6 @@ header {
   .shop-motto {
     opacity: 0.5;
   }
-
   .li-mr {
     margin-right: 30px;
     justify-content: space-between;
@@ -80,53 +186,79 @@ header {
 }
 .content {
   padding: 40px;
-  h1 {
-    margin: 0;
+  .div-search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    h1 {
+      margin: 0;
+    }
+    .search-block {
+      display: flex;
+      border: 1px solid #f3f3f3;
+      border-radius: 10px;
+      padding: 0 15px;
+      input {
+        border: 0;
+        padding: 13px;
+        font-size: 16px;
+        width: 200px;
+      }
+    }
+  }
+  .itemsCard {
+    display: flex;
+    .card {
+      border: 1px solid #f8f8f8f8;
+      padding: 30px;
+      width: 220px;
+      border-radius: 40px;
+      margin-right: 30px;
+      transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+      &:hover {
+        box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.6);
+        transform: translateY(-5px);
+      }
+      .favorite {
+        position: absolute;
+        cursor: pointer;
+      }
+      h5 {
+        font-weight: 400;
+        font-size: 14px;
+      }
+      .cardclass1 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .cardclass2 {
+          display: flex;
+          flex-direction: column;
+          span {
+            font-size: 13px;
+            opacity: 0.5;
+            text-transform: uppercase;
+          }
+          b {
+            font-size: 14px;
+          }
+        }
+        .button {
+          background: #ffffff;
+          border: 1px solid #f2f2f2;
+          box-sizing: border-box;
+          border-radius: 8px;
+          height: 32px;
+          width: 32px;
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
-.items {
-  display: flex;
-}
-.all-items {
-  margin-bottom: 40px;
-}
-.card {
-  border: 1px solid #f8f8f8f8;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
 
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
-  }
-}
-.cardclass1 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cardclass2 {
-  display: flex;
-  flex-direction: column;
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-  b {
-    font-size: 14px;
-  }
 
-}
-.button {
-  background: #ffffff;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
 
-}
+
+
