--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -33,6 +33,9 @@
           font-size: 14px;
         }
       }
+      .plus {
+        cursor: pointer;
+      }
       .button {
         background: #ffffff;
         border: 1px solid #f2f2f2;
