--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,52 @@ body {
           cursor: pointer;
         }
       }
+      .cartEmpty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        img {
+          margin-bottom: 0px;
+        }
+        p {
+          opacity: 0.6;
+          width: 280px;
+          line-height: 24px;
+        }
+        .greenBtn {
+          width: 245px;
+          height: 55px;
+          background: #9dd558;
+          border-radius: 18px;
+          border: 0;
+          color: #fff;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+          transition: background 0.1s ease-in-out;
+          &:hover {
+            background: lighten(#9dd558, 5%);
+          }
+          &:active {
+            background: darken(#9dd558, 5%);
+          }
+          position: relative;
+          &:hover {
+            img {
+            transform: rotate(180deg) translateX(3px);
+          }}
+          img {
+            position: relative;
+            top: 1px;
+            transform: rotate 180deg;
+            margin-right: 15px;
+            
+            transition: transform 0.15s ease-in-out;
+          }
+        }
+      }
       .itemsCart {
         flex: 1;
         overflow: auto;
@@ -184,6 +230,10 @@ header {
     justify-content: space-between;
     cursor: pointer;
   }
+  .li-fv {
+    margin-right: 10px;
+    cursor: pointer;
+  }
 }
 .content {
   padding: 40px;
@@ -200,11 +250,18 @@ header {
       border: 1px solid #f3f3f3;
       border-radius: 10px;
       padding: 0 15px;
+      position: relative;
       input {
         border: 0;
         padding: 13px;
         font-size: 16px;
         width: 200px;
+      }
+      .clearSearch {
+        position: absolute;
+        right: 0;
+        top: 14px;
+        cursor: pointer;
       }
     }
   }
